ci_cd/gitea/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ci-cd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
