ci_cd/gitea/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: ci-cd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea.svc.k8s.monster.lab`)
      kind: Rule
      services:
        - name: gitea
          port: 3000
  tls:
    secretName: monster-server-cert
    options:
      name: mtls-strict
      namespace: ci-cd
